# SigmaServer

./: .gitignore  AGENTS.md  AddModel.py  CLAUDE.md  Dockerfile  README.md  models_registry.json  pyproject.toml  restart.sh  server.py
